Mention native code loading bypass